--- a/src/pages/HomeSections/sections.css
+++ b/src/pages/HomeSections/sections.css
@@ -1,3 +1,69 @@
 .content {
-    clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 90%);
+    clip-path: polygon(0 0, 100% 8%, 100% 100%, 0 92%);
   }
+.content2 {
+    clip-path: polygon(0 8%, 100% 0, 100% 92%, 0 100%);
+  }
+
+  .box-container {
+    position: relative;
+    width: 250px;
+    height: 250px;
+  }
+  
+  .black-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    
+  }
+  
+  .white-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    transform: translateX(20px) translateY(20px);
+  }
+
+  #instagram > svg:hover{
+    fill: url(#gradient-fill);
+    transform: scale(1.05);
+  }
+  #youtube > svg:hover{
+    fill: red;
+    transform: scale(1.05);
+  }
+  #linkedin > svg:hover{
+    fill: #0077B5;
+    transform: scale(1.05);
+  }
+  #facebook > svg:hover{
+    fill: #1877F2;
+    transform: scale(1.05);
+  }
+  #x > svg:hover{
+    fill: black;
+    transform: scale(1.05);
+  }
+
+  /* #youtube  > svg:hover {
+    fill: red;
+    transform: scale(1.05);
+    animation: fill-color-animation 1s ease-in-out;
+
+  }
+
+  @keyframes fill-color-animation {
+    10% {
+    clip-path: polygon(0 96%, 100% 96%, 100% 100%, 0% 100%);
+  }
+  100% {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  }
+  } */
