--- a/src/pages/IncentivesSections/sections.css
+++ b/src/pages/IncentivesSections/sections.css
@@ -70,3 +70,65 @@
   .glow-line.active {
     animation: glowAnimation 3.5s linear forwards;
   }
+
+  .img-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 10%;
+    transition: 0.6s;
+    z-index: 99;
+  }
+
+  .img-container img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+    transition: 0.6s;
+    aspect-ratio: 1/1;
+    object-fit: contain;
+    mix-blend-mode: color-burn;
+  }
+  .profile-card {
+    position: relative;
+    background-color: white;
+    border-radius: 10%;
+    box-shadow: 0 0 22px #3336;
+    transition: 0.6s;
+    margin: 0px;
+  }
+  .profile-card:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+  }
+  .profile-card:hover::before,
+.profile-card:hover::after {
+  transform: scale(1.05);
+  filter:blur(2px)
+}
+  .profile-card::before{
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: #fff;
+    border-radius: 10%;
+    z-index: -1;
+    transition: 0.6s;
+  }
+  .profile-card::after{
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    border-radius: 10%;
+    background: #fff;
+    z-index: -2;
+    filter: blur(5px);
+    transition: 0.6s;
+  }
